--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="user_id">User ID</string>
     <string name="password">Password</string>
     <string name="login_button">LOGIN</string>
+    <string name="login">Already have an account? Login</string>
+    <string name="sign_up_button">SIGN-UP</string>
+    <string name="sign_up">Don\'t have an account? Sign up</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="email">Email</string>
 </resources>
