--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="sign_up">Don\'t have an account? Sign up</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="email">Email</string>
+    <string name="logo">Logo</string>
 </resources>
