--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="email">Email</string>
     <string name="logo">Logo</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
