--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">ARSpace</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">Saved</string>
+    <string name="title_search">Search</string>
+    <string name="title_settings">Settings</string>
     <string name="user_id">User ID</string>
     <string name="password">Password</string>
     <string name="login_button">LOGIN</string>
