--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="email">Email</string>
     <string name="logo">Logo</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_product_list">Products</string>
+    <string name="title_product_detail">Product Detail</string>
 </resources>
