--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">ARSpace</string>
+    <string name="app_label">AR Space</string>
     <string name="title_home">Saved</string>
     <string name="title_search">Search</string>
     <string name="title_settings">Settings</string>
@@ -15,4 +16,5 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_product_list">Products</string>
     <string name="title_product_detail">Product Detail</string>
+    <string name="search_hint">Search Products</string>
 </resources>
